--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
   "engines": {
     "node": "*"
   },
+  "peerDependencies": {
+    "grunt": ">=1.0.1"
+  },
   "devDependencies": {
-    "grunt": ">= 0.4.1 <= 1.0.1"
+    "grunt": ">=1.0.1"
   },
   "keywords": [
     "gruntplugin",
@@ -34,7 +37,7 @@
   ],
   "dependencies": {
     "q": "~0.8.12",
-    "grunt": ">= 0.4.1 <= 1.0.1",
+    "grunt": ">=1.0.1",
     "lpad": "~0.1.0"
   }
 }
