--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
     "node": "*"
   },
   "peerDependencies": {
-    "grunt": ">= 0.4.1 <=1.0.1"
+    "grunt": ">= 0.4.1 < 1.1"
   },
   "devDependencies": {
-    "grunt": ">= 0.4.1 <=1.0.1"
+    "grunt": ">= 0.4.1 < 1.1"
   },
   "keywords": [
     "gruntplugin",
@@ -37,7 +37,7 @@
   ],
   "dependencies": {
     "q": "~0.8.12",
-    "grunt": ">= 0.4.1 <=1.0.1",
+    "grunt": ">= 0.4.1 < 1.1",
     "lpad": "~0.1.0"
   }
 }
